--- a/Getting_Started.html
+++ b/Getting_Started.html
@@ -121,7 +121,7 @@ source venv/bin/activate  # On Windows use `venv\\Scripts\\activate`</code></pre
         <p>If you would like to contribute to this project, please fork the repository and create a pull request with your proposed changes. Ensure that your code follows the project's coding style and includes appropriate tests.</p>
 
         <h2 id="license">License</h2>
-        <p>This project is licensed under the MIT License - see the LICENSE file for details.</p>
+        <p>This project is licensed under the MIT License - see the <a href="https://github.com/Aijcoder/DjangoChatBot/blob/main/LICENSE">LICENSE</a> file for details.</p>
     </div>
 </body>
 </html>
