--- a/Getting_Started.html
+++ b/Getting_Started.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Django Chat Bot</title>
+    <title>Django Chat Bot - Getting Started</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 20px;
-            color: #333;
-            background-color: #f4f4f4;
+            color: #e0e0e0;
+            background-color: #1e1e1e;
         }
         h1, h2, h3, h4, h5, h6 {
-            color: #007bff;
+            color: #4fc3f7;
         }
         code {
-            background-color: #f8f9fa;
-            border: 1px solid #e9ecef;
+            background-color: #333;
+            border: 1px solid #444;
             border-radius: 4px;
             padding: 2px 4px;
             font-size: 90%;
-            color: #e83e8c;
+            color: #e0e0e0;
         }
         pre {
-            background-color: #343a40;
-            color: #f8f9fa;
+            background-color: #2c2c2c;
+            color: #e0e0e0;
             padding: 10px;
             border-radius: 4px;
             overflow-x: auto;
@@ -35,7 +35,7 @@
             margin-left: 20px;
         }
         a {
-            color: #007bff;
+            color: #4fc3f7;
             text-decoration: none;
         }
         a:hover {
@@ -44,10 +44,10 @@
         .container {
             max-width: 800px;
             margin: auto;
-            background: #fff;
+            background: #2a2a2a;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.3);
         }
     </style>
 </head>
@@ -78,8 +78,8 @@
         <h2 id="installation">Installation</h2>
         <ol>
             <li><strong>Clone the Repository:</strong>
-                <pre><code>git clone https://github.com/Aijcoder/Django-Chat-Bot.git
-cd Django-Chat-Bot</code></pre>
+                <pre><code>git clone https://github.com/Aijcoder/DjangoChatBot.git
+cd DjangoChatBot</code></pre>
             </li>
             <li><strong>Create a Virtual Environment:</strong>
                 <pre><code>python -m venv venv
